Revision history for Perl extension CGI::Header.

  - Remove handler() and add redirect() instead

0.46  Apr 11th, 2013

  - Remove CGI::Header::PSGI from this distribution. Sorry for confusing
    changes.
  - Simplify cookie() and p3p()
  - push_cookie() creates CGI::Cookie object automatically

0.45  Apr 10th, 2013

  - Add CGI::Header::PSGI to this distribution and rewrite the module
    entirely.

  [INCOMPATIBLE CHANGES]

    - Rewrite test suite entirely
    - Remove flatten() and as_hashref() from CGI::Header

0.44  Apr 9th, 2013

  [INCOMPATIBLE CHANGES]

    - Revise new() entirely

0.43  Apr 8th, 2013

   [INCOMPATIBLE CHANGES]

    - Remove dispatch tables used by set() and delete()
    - Remove tie() interface

0.42  Apr 8th, 2013

  - Add handler() attribute which defaults to 'header'.
    If handler() is set to 'redirect', as_string() will invoke:

        $h->query->redirect( $h->header )

  [INCOMPATIBLE CHANGES]

    - Remove CGI::Header::Redirect and t/31_cgi_redirect.t
    - Remove t/32_nph_pragma.t
    - Remove push_p3p()

0.41  Apr 8th, 2013

  - CGI::Header::Redirect is obsolete and will be removed in 0.42

  [INCOMPATIBLE CHANGES]

  - Simplify get() and exists(). Namely,

      $h->get('Content-Type');
      $h->exists('Content-Type');

    become:

      $h->as_hashref->{'Conetent-Type'};
      exists $h->as_hashref->{'Content-Type'};

  - Remove the following methods:
      * is_empty
      * field_names
      * is_empty
      * SCALAR
      * p3p_tags

  - Normalized property names doesn't start with a dash,
    and also use dashes instead of underscores:

      "-Content_Length" -> "content-length"

  [ROADMAP]

    Dispatch tables used by get(), set(), exists() and delete() will be
    removed gradually, and so ver. 0.4x will be quite unstable.
    Sorry for your inconvenience.

0.40  Apr 7th, 2013

  - field_names() is obsolete and will be removed in 0.41
  - Add as_hashref(). get() and exists() will be replaced with this method: