@@ -1,6 +1,11 @@
 Revision history for Perl extension CGI::Header.
 
   - Remove handler() and add redirect() instead
+  - Rename cookie() to cookies() since the "cookie" property can be an
+    arrayref
+  - Remove push_cookie(). It's up to you to decide how to manage HTTP cookies.
+    For example, Plack::Response#cookies behaves like HASH. On the other
+    hand, Mojo::Message::Response#cookies behaves like ARRAY.
 
 0.46  Apr 11th, 2013
 
